--- a/AICodeAnalyzer/MainWindow.xaml
+++ b/AICodeAnalyzer/MainWindow.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:markdig="clr-namespace:Markdig.Wpf;assembly=Markdig.Wpf"
         mc:Ignorable="d"
         Title="AI Code Analyzer" Height="800" Width="1200">
     
@@ -18,6 +19,9 @@
             <MenuItem Header="_File" Style="{StaticResource MenuItemStyle}">
                 <MenuItem Header="_Exit" Click="MenuExit_Click"/>
             </MenuItem>
+            <MenuItem Header="_Settings" Style="{StaticResource MenuItemStyle}">
+                <MenuItem Header="_Configure..." Click="MenuConfigure_Click"/>
+            </MenuItem>
             <MenuItem Header="_Help" Style="{StaticResource MenuItemStyle}">
                 <MenuItem Header="_About" Click="MenuAbout_Click"/>
             </MenuItem>
@@ -31,11 +35,14 @@
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="150"/>
             </Grid.RowDefinitions>
             
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="3*"/>
-                <ColumnDefinition Width="7*"/>
+                <ColumnDefinition Width="3*" MinWidth="200"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="7*" MinWidth="300"/>
             </Grid.ColumnDefinitions>
             
             <!-- Project Selection Area -->
@@ -78,18 +85,80 @@
                 </DockPanel>
             </GroupBox>
             
+            <!-- GridSplitter -->
+            <GridSplitter 
+                Grid.Row="0" 
+                Grid.RowSpan="5" 
+                Grid.Column="1"
+                Width="5"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Stretch"
+                Background="#DDDDDD"
+                ShowsPreview="True"
+                ResizeBehavior="PreviousAndNext"
+                Cursor="SizeWE"/>
+            
             <!-- Response Area -->
-            <GroupBox Grid.Row="0" Grid.Column="1" Grid.RowSpan="5" Header="AI Analysis" Margin="5,0,0,10" Padding="5">
+            <GroupBox Grid.Row="0" Grid.Column="2" Grid.RowSpan="5" Header="AI Analysis" Margin="5,0,0,10" Padding="5">
                 <DockPanel>
-                    <Button x:Name="BtnSaveResponse" Content="Save Response" DockPanel.Dock="Bottom" Height="30" Margin="0,5,0,0" Click="BtnSaveResponse_Click" IsEnabled="False"/>
-                    <TextBox x:Name="TxtResponse" TextWrapping="Wrap" AcceptsReturn="True" IsReadOnly="True" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" FontFamily="Consolas"/>
+                    <Grid DockPanel.Dock="Bottom" Margin="0,5,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <Button x:Name="BtnSaveResponse" Content="Save Response" Grid.Column="0" Height="30" Margin="0,0,2,0" Click="BtnSaveResponse_Click" IsEnabled="False"/>
+                        <Button x:Name="BtnToggleMarkdown" Content="Show Raw Text" Grid.Column="1" Height="30" Margin="2,0,0,0" Click="BtnToggleMarkdown_Click" IsEnabled="False"/>
+                    </Grid>
+                    
+                    <!-- Markdown Display -->
+                    <Grid>
+                        <!-- Regular TextBox (for raw view) -->
+                        <TextBox x:Name="TxtResponse" TextWrapping="Wrap" AcceptsReturn="True" IsReadOnly="True" 
+                                 VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" 
+                                 FontFamily="Consolas" Visibility="Collapsed"/>
+                        
+                        <!-- Markdown Viewer -->
+                        <ScrollViewer x:Name="MarkdownScrollViewer" Visibility="Visible" 
+                                      VerticalScrollBarVisibility="Auto" 
+                                      HorizontalScrollBarVisibility="Disabled"
+                                      PanningMode="VerticalOnly"
+                                      CanContentScroll="True"
+                                      PreviewMouseWheel="MarkdownScrollViewer_PreviewMouseWheel"
+                                      SizeChanged="MarkdownScrollViewer_SizeChanged">
+                            <markdig:MarkdownViewer x:Name="MarkdownViewer" 
+                                                   Background="White" 
+                                                   Padding="10"
+                                                   HorizontalAlignment="Stretch"
+                                                   Width="{Binding ActualWidth, RelativeSource={RelativeSource AncestorType=ScrollViewer}}"/>
+                        </ScrollViewer>
+                    </Grid>
                 </DockPanel>
             </GroupBox>
             
-            <!-- Footer -->
-            <StackPanel Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Center">
-                <TextBlock Text="AI Code Analyzer - Analyze your entire code base with AI" Margin="0,5"/>
-            </StackPanel>
+            <!-- Horizontal GridSplitter -->
+            <GridSplitter 
+                Grid.Row="6" 
+                Grid.Column="0" 
+                Grid.ColumnSpan="3"
+                Height="5"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Center"
+                Background="#DDDDDD"
+                ShowsPreview="True"
+                ResizeBehavior="PreviousAndNext"
+                Cursor="SizeNS"/>
+                
+            <!-- Log Panel -->
+            <GroupBox Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="3" Header="Operation Log" Margin="0,5,0,0" Padding="5">
+                <TextBox x:Name="TxtLog" 
+                         IsReadOnly="True" 
+                         TextWrapping="NoWrap" 
+                         FontFamily="Consolas" 
+                         FontSize="11"
+                         VerticalScrollBarVisibility="Auto" 
+                         HorizontalScrollBarVisibility="Auto" 
+                         Background="#F5F5F5"/>
+            </GroupBox>
         </Grid>
     </DockPanel>
 </Window>
