--- a/AICodeAnalyzer/MainWindow.xaml
+++ b/AICodeAnalyzer/MainWindow.xaml
@@ -6,54 +6,74 @@
         xmlns:markdig="clr-namespace:Markdig.Wpf;assembly=Markdig.Wpf"
         mc:Ignorable="d"
         Title="AI Code Analyzer" Height="800" Width="1200">
-    
+
     <Window.Resources>
         <Style x:Key="MenuItemStyle" TargetType="MenuItem">
-            <Setter Property="Padding" Value="8,3"/>
-            <Setter Property="FontSize" Value="12"/>
+            <Setter Property="Padding" Value="8,3" />
+            <Setter Property="FontSize" Value="12" />
         </Style>
     </Window.Resources>
-    
+
     <DockPanel>
+        <!-- Menu at the top -->
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="_File" Style="{StaticResource MenuItemStyle}">
-                <MenuItem Header="_Exit" Click="MenuExit_Click"/>
+                <MenuItem Header="_Exit" Click="MenuExit_Click" />
             </MenuItem>
             <MenuItem Header="_Settings" Style="{StaticResource MenuItemStyle}">
-                <MenuItem Header="_Configure..." Click="MenuConfigure_Click"/>
+                <MenuItem Header="_Configure..." Click="MenuConfigure_Click" />
             </MenuItem>
             <MenuItem Header="_Help" Style="{StaticResource MenuItemStyle}">
-                <MenuItem Header="_About" Click="MenuAbout_Click"/>
+                <MenuItem Header="_About" Click="MenuAbout_Click" />
             </MenuItem>
         </Menu>
-        
+
+        <!-- StatusBar at the bottom -->
+        <StatusBar DockPanel.Dock="Bottom">
+            <TextBlock x:Name="TxtStatus" Text="Ready" />
+        </StatusBar>
+
+        <!-- Main content grid (fills remaining space) -->
         <Grid Margin="10">
+            <!-- Grid content remains unchanged -->
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/> <!-- Row 0 -->
-                <RowDefinition Height="Auto"/> <!-- Row 1 -->
-                <RowDefinition Height="Auto"/> <!-- Row 2 -->
-                <RowDefinition Height="Auto"/> <!-- Row 3 -->
-                <RowDefinition Height="*"/>    <!-- Row 4 -->
-                <RowDefinition Height="Auto"/> <!-- Row 5 -->
-                <RowDefinition Height="Auto"/> <!-- Row 6 -->
-                <RowDefinition Height="*"/>    <!-- Row 7 -->
-                <RowDefinition Height="Auto"/>  <!-- Row 8 -->
+                <RowDefinition Height="Auto" /> <!-- Row 0 -->
+                <RowDefinition Height="Auto" /> <!-- Row 1 -->
+                <RowDefinition Height="Auto" /> <!-- Row 2 -->
+                <RowDefinition Height="Auto" /> <!-- Row 3 -->
+                <RowDefinition Height="*" />    <!-- Row 4 -->
+                <RowDefinition Height="Auto" /> <!-- Row 5 -->
+                <RowDefinition Height="Auto" /> <!-- Row 6 -->
+                <RowDefinition Height="*" />    <!-- Row 7 -->
+                <RowDefinition Height="Auto" />  <!-- Row 8 -->
             </Grid.RowDefinitions>
-            
+
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="3*" MinWidth="200"/>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="7*" MinWidth="300"/>
+                <ColumnDefinition Width="3*" MinWidth="200" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="7*" MinWidth="300" />
             </Grid.ColumnDefinitions>
-            
+
             <!-- Project Selection Area -->
             <GroupBox Grid.Row="0" Grid.Column="0" Header="Project Selection" Margin="0,0,5,10" Padding="5">
-                <StackPanel>
-                    <DockPanel Margin="0,5">
-                        <Button x:Name="BtnSelectFolder" Content="Select Folder" Click="BtnSelectFolder_Click" Width="100" DockPanel.Dock="Right" Margin="5,0,0,0" Height="25"/>
-                        <TextBox x:Name="TxtSelectedFolder" IsReadOnly="True" VerticalContentAlignment="Center"/>
-                    </DockPanel>
-                    <TextBlock x:Name="TxtStatus" Text="Ready" Margin="0,5"/>
+                <StackPanel Margin="10">
+                    <TextBlock Text="Project Files" FontWeight="Bold" Margin="0,0,0,5" />
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+                        <TextBox x:Name="TxtSelectedFolder" IsReadOnly="True" Grid.Column="0" Margin="0,0,5,0" />
+                        <Button x:Name="BtnSelectFolder" Content="Select Folder" Grid.Column="1"
+                                Click="BtnSelectFolder_Click" Padding="8,3" Margin="0,0,5,0" />
+                        <Button x:Name="BtnSelectFiles" Content="Add Files" Grid.Column="2"
+                                Click="BtnSelectFiles_Click" Padding="8,3" Margin="0,0,5,0"
+                                ToolTip="Add specific files to the analysis" />
+                        <Button x:Name="BtnClearFiles" Content="Clear" Grid.Column="3" Click="BtnClearFiles_Click"
+                                Padding="8,3" ToolTip="Clear all selected files" />
+                    </Grid>
                 </StackPanel>
             </GroupBox>
 
@@ -94,7 +114,7 @@
 
                     <!-- Save Button -->
                     <Button x:Name="BtnSaveKey" Content="Save Current Key" Grid.Row="3" Grid.Column="0"
-                            Grid.ColumnSpan="3" Margin="0,0,0,0" Click="BtnSaveKey_Click" Height="25"/>
+                            Grid.ColumnSpan="3" Margin="0,0,0,0" Click="BtnSaveKey_Click" Height="25" />
                 </Grid>
             </GroupBox>
 
@@ -110,7 +130,8 @@
                             <Setter Property="HorizontalContentAlignment" Value="Stretch" />
                         </Style>
                     </ListView.ItemContainerStyle>
-                </ListView>            </GroupBox>
+                </ListView>
+            </GroupBox>
 
             <!-- Follow-up Question -->
             <GroupBox Grid.Row="5" Grid.Column="0" Header="Follow-up Question" Margin="0,0,5,10" Padding="5">
@@ -121,11 +142,11 @@
                              VerticalScrollBarVisibility="Auto" IsEnabled="False" />
                 </DockPanel>
             </GroupBox>
-            
+
             <!-- GridSplitter -->
-            <GridSplitter 
-                Grid.Row="0" 
-                Grid.RowSpan="6" 
+            <GridSplitter
+                Grid.Row="0"
+                Grid.RowSpan="6"
                 Grid.Column="1"
                 Width="5"
                 HorizontalAlignment="Center"
@@ -133,61 +154,63 @@
                 Background="#DDDDDD"
                 ShowsPreview="True"
                 ResizeBehavior="PreviousAndNext"
-                Cursor="SizeWE"/>
-            
+                Cursor="SizeWE" />
+
             <!-- Response Area -->
             <GroupBox Grid.Row="0" Grid.Column="2" Grid.RowSpan="6" Header="AI Analysis" Margin="5,0,0,10" Padding="5">
                 <DockPanel>
                     <Grid DockPanel.Dock="Bottom" Margin="0,5,0,0">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
-                        <Button x:Name="BtnSaveResponse" Content="Save Response" Grid.Column="0" Height="30" Margin="0,0,2,0" Click="BtnSaveResponse_Click" IsEnabled="False"/>
-                        <Button x:Name="BtnToggleMarkdown" Content="Show Raw Text" Grid.Column="1" Height="30" Margin="2,0,0,0" Click="BtnToggleMarkdown_Click" IsEnabled="False"/>
+                        <Button x:Name="BtnSaveResponse" Content="Save Response" Grid.Column="0" Height="30"
+                                Margin="0,0,2,0" Click="BtnSaveResponse_Click" IsEnabled="False" />
+                        <Button x:Name="BtnToggleMarkdown" Content="Show Raw Text" Grid.Column="1" Height="30"
+                                Margin="2,0,0,0" Click="BtnToggleMarkdown_Click" IsEnabled="False" />
                     </Grid>
-                    
+
                     <!-- Markdown Display -->
                     <Grid>
                         <!-- Regular TextBox (for raw view) -->
-                        <TextBox x:Name="TxtResponse" TextWrapping="Wrap" AcceptsReturn="True" IsReadOnly="True" 
-                                 VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" 
-                                 FontFamily="Consolas" Visibility="Collapsed"/>
-                        
+                        <TextBox x:Name="TxtResponse" TextWrapping="Wrap" AcceptsReturn="True" IsReadOnly="True"
+                                 VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto"
+                                 FontFamily="Consolas" Visibility="Collapsed" />
+
                         <!-- Markdown Viewer -->
-                        <ScrollViewer x:Name="MarkdownScrollViewer" Visibility="Visible" 
-                                      VerticalScrollBarVisibility="Auto" 
+                        <ScrollViewer x:Name="MarkdownScrollViewer" Visibility="Visible"
+                                      VerticalScrollBarVisibility="Auto"
                                       HorizontalScrollBarVisibility="Auto"
                                       PanningMode="VerticalOnly"
                                       CanContentScroll="True"
                                       PreviewMouseWheel="MarkdownScrollViewer_PreviewMouseWheel"
                                       SizeChanged="MarkdownScrollViewer_SizeChanged">
-                            <markdig:MarkdownViewer x:Name="MarkdownViewer" 
-                                                   Background="White" 
-                                                   Padding="10"
-                                                   HorizontalAlignment="Stretch" />
+                            <markdig:MarkdownViewer x:Name="MarkdownViewer"
+                                                    Background="White"
+                                                    Padding="10"
+                                                    HorizontalAlignment="Stretch" />
                         </ScrollViewer>
                     </Grid>
                 </DockPanel>
             </GroupBox>
-            
+
             <!-- Log Panel -->
-            <GroupBox Grid.Row="7" 
-                      Grid.Column="0" 
-                      Grid.ColumnSpan="3" 
-                      Header="Operation Log" 
-                      Margin="0,5,0,0" 
-                      Padding="5" 
+            <GroupBox Grid.Row="7"
+                      Grid.Column="0"
+                      Grid.ColumnSpan="3"
+                      Header="Operation Log"
+                      Margin="0,5,0,0"
+                      Padding="5"
                       VerticalAlignment="Stretch">
-                <TextBox x:Name="TxtLog" 
-                         IsReadOnly="True" 
-                         TextWrapping="NoWrap" 
-                         FontFamily="Consolas" 
+                <TextBox x:Name="TxtLog"
+                         IsReadOnly="True"
+                         TextWrapping="NoWrap"
+                         FontFamily="Consolas"
                          FontSize="11"
-                         VerticalScrollBarVisibility="Auto" 
+                         VerticalScrollBarVisibility="Auto"
                          HorizontalScrollBarVisibility="Auto"
                          VerticalAlignment="Stretch"
-                         Background="#F5F5F5"/>
+                         Background="#F5F5F5" />
             </GroupBox>
         </Grid>
     </DockPanel>
