--- a/AICodeAnalyzer/MainWindow.xaml
+++ b/AICodeAnalyzer/MainWindow.xaml
@@ -45,7 +45,6 @@
                 <RowDefinition Height="Auto" /> <!-- Row 5 -->
                 <RowDefinition Height="Auto" /> <!-- Row 6 -->
                 <RowDefinition Height="*" />    <!-- Row 7 -->
-                <RowDefinition Height="Auto" />  <!-- Row 8 -->
             </Grid.RowDefinitions>
 
             <Grid.ColumnDefinitions>
@@ -119,12 +118,12 @@
             </GroupBox>
 
             <!-- Analyze Button -->
-            <Button x:Name="BtnAnalyze" Content="Analyze Code" Grid.Row="3" Grid.Column="0" Height="25"
+            <Button Content="Analyze Code" Grid.Row="3" Grid.Column="0" Height="25"
                     Margin="0,0,5,10" Click="BtnAnalyze_Click" />
 
             <!-- Files List -->
-            <GroupBox Grid.Row="4" Grid.Column="0" Header="Source Files" Margin="0,0,5,10" Padding="5">
-                <ListView x:Name="LvFiles" Margin="0,5">
+            <GroupBox Grid.Row="4" Grid.Column="0" Grid.RowSpan="3" Header="Files List" Margin="0,0,5,10" Padding="5" VerticalAlignment="Stretch">
+                <ListView x:Name="LvFiles" Margin="0,5" VerticalAlignment="Stretch">
                     <ListView.ItemContainerStyle>
                         <Style TargetType="ListViewItem">
                             <Setter Property="HorizontalContentAlignment" Value="Stretch" />
@@ -133,20 +132,10 @@
                 </ListView>
             </GroupBox>
 
-            <!-- Follow-up Question -->
-            <GroupBox Grid.Row="5" Grid.Column="0" Header="Follow-up Question" Margin="0,0,5,10" Padding="5">
-                <DockPanel>
-                    <Button x:Name="BtnSendFollowup" Content="Send" Width="60" DockPanel.Dock="Right" Margin="5,0,0,0"
-                            IsEnabled="False" Click="BtnSendFollowup_Click" />
-                    <TextBox x:Name="TxtFollowupQuestion" Height="60" TextWrapping="Wrap" AcceptsReturn="True"
-                             VerticalScrollBarVisibility="Auto" IsEnabled="False" />
-                </DockPanel>
-            </GroupBox>
-
             <!-- GridSplitter -->
             <GridSplitter
                 Grid.Row="0"
-                Grid.RowSpan="6"
+                Grid.RowSpan="7"
                 Grid.Column="1"
                 Width="5"
                 HorizontalAlignment="Center"
@@ -157,7 +146,7 @@
                 Cursor="SizeWE" />
 
             <!-- Response Area -->
-            <GroupBox Grid.Row="0" Grid.Column="2" Grid.RowSpan="6" Header="AI Analysis" Margin="5,0,0,10" Padding="5">
+            <GroupBox Grid.Row="0" Grid.Column="2" Grid.RowSpan="5" Header="AI Analysis" Margin="5,0,0,10" Padding="5">
                 <DockPanel>
                     <Grid DockPanel.Dock="Bottom" Margin="0,5,0,0">
                         <Grid.ColumnDefinitions>
@@ -191,6 +180,16 @@
                                                     HorizontalAlignment="Stretch" />
                         </ScrollViewer>
                     </Grid>
+                </DockPanel>
+            </GroupBox>
+            
+            <!-- Follow-up Question -->
+            <GroupBox Grid.Row="6" Grid.Column="2" Header="Follow-up Question" Margin="5,0,0,0" Padding="5">
+                <DockPanel>
+                    <Button x:Name="BtnSendFollowup" Content="Send" Width="60" DockPanel.Dock="Right" Margin="5,0,0,0"
+                            IsEnabled="False" Click="BtnSendFollowup_Click" />
+                    <TextBox x:Name="TxtFollowupQuestion" Height="60" TextWrapping="Wrap" AcceptsReturn="True"
+                             VerticalScrollBarVisibility="Auto" IsEnabled="False" />
                 </DockPanel>
             </GroupBox>
 
