--- a/AICodeAnalyzer/MainWindow.xaml
+++ b/AICodeAnalyzer/MainWindow.xaml
@@ -48,9 +48,9 @@
             </Grid.RowDefinitions>
 
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="2*" MinWidth="200" />
+                <ColumnDefinition Width="3*" MinWidth="200" />
                 <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="8*" MinWidth="300" />
+                <ColumnDefinition Width="7*" MinWidth="300" />
             </Grid.ColumnDefinitions>
 
             <!-- Project Selection Area -->
@@ -72,6 +72,25 @@
                                 ToolTip="Add specific files to the analysis" />
                         <Button x:Name="BtnClearFiles" Content="Clear" Grid.Column="3" Click="BtnClearFiles_Click"
                                 Padding="8,3" ToolTip="Clear all selected files" />
+                    </Grid>
+                </StackPanel>
+            </GroupBox>
+            
+            <GroupBox Grid.Row="2" Grid.Column="0" Header="Initial Prompt" Margin="0,0,5,10" Padding="5">
+                <StackPanel Margin="10">
+                    <TextBlock Text="Select Template" FontWeight="Bold" Margin="0,0,0,5" />
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+                        <ComboBox x:Name="CboPromptTemplate" Grid.Column="0" 
+                                  SelectionChanged="CboPromptTemplate_SelectionChanged"
+                                  DisplayMemberPath="Name"
+                                  Margin="0,0,5,0" />
+                        <Button x:Name="BtnConfigurePrompts" Content="Edit" 
+                                Grid.Column="1" Padding="8,3" 
+                                Click="BtnConfigurePrompts_Click" />
                     </Grid>
                 </StackPanel>
             </GroupBox>
