--- a/AICodeAnalyzer/ConfigurationWindow.xaml
+++ b/AICodeAnalyzer/ConfigurationWindow.xaml
@@ -138,6 +138,44 @@
                     </GroupBox>
                 </Grid>
             </TabItem>
+            <TabItem Header="File Association">
+                <Grid Margin="10">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+        
+                    <TextBlock Grid.Row="0" Text="Configure how this application handles Markdown (.md) files" 
+                               Margin="0,0,0,10" TextWrapping="Wrap"/>
+        
+                    <GroupBox Grid.Row="1" Header="File Association Settings" Padding="10">
+                        <StackPanel>
+                            <CheckBox x:Name="ChkRegisterFileAssociation" 
+                                      Content="Register as default application for .md files" 
+                                      Margin="0,5,0,10"
+                                      Checked="ChkRegisterFileAssociation_CheckedChanged"
+                                      Unchecked="ChkRegisterFileAssociation_CheckedChanged"/>
+                
+                            <TextBlock TextWrapping="Wrap" Margin="20,0,0,0">
+                                When enabled, AI Code Analyzer will be registered as the default application
+                                for opening Markdown (.md) files. This allows you to easily open analysis 
+                                results by double-clicking them in File Explorer.
+                            </TextBlock>
+                
+                            <TextBlock x:Name="TxtAssociationStatus" 
+                                       Margin="0,15,0,0" 
+                                       TextWrapping="Wrap"
+                                       FontStyle="Italic"/>
+                        </StackPanel>
+                    </GroupBox>
+        
+                    <TextBlock Grid.Row="2" Margin="0,20,0,0" TextWrapping="Wrap" Foreground="#707070">
+                        Note: Changing this setting may require administrator privileges on some systems.
+                        If you encounter issues, try running the application as administrator.
+                    </TextBlock>
+                </Grid>
+            </TabItem>
         </TabControl>
         
         <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Right">
